2007-03-24  David Hyatt  <hyatt@apple.com>

        Amend the statistics reporting for the WebCore cache to include XSL and to report live/decoded sizes.

        * Misc/WebCache.mm:
        (+[WebCache statistics]):

2007-03-24  Brady Eidson  <beidson@apple.com>

        Reviewed by Adam

        RetainPtr is no longer in the WebCore namespace

        * History/WebBackForwardList.mm:
        * WebCoreSupport/WebEditorClient.h:
        * WebCoreSupport/WebFrameLoaderClient.h:
        * WebView/WebDocumentLoaderMac.h:

2007-03-24  Brady Eidson  <beidson@apple.com>

        Reviewed by Adam

        <rdar://problem/5086210> - Move RetainPtr to WTF
        
        * ForwardingHeaders/wtf/RetainPtr.h: Added.
        * History/WebBackForwardList.mm: Changed #import to <wtf/RetainPtr.h>
        * WebCoreSupport/WebEditorClient.h: Ditto
        * WebCoreSupport/WebFrameLoaderClient.h: Ditto
        * WebView/WebDocumentLoaderMac.h: Ditto

2007-03-24  John Sullivan  <sullivan@apple.com>

        Reviewed by Adele

        - fixed <rdar://problem/5084872> Need to add flickr to spoof list in WebKit
        - only do site-specific spoofing if a preference is set

        * WebView/WebPreferenceKeysPrivate.h:
        added WebKitUseSiteSpecificSpoofingPreferenceKey 
        
        * WebView/WebPreferences.m:
        (+[WebPreferences initialize]):
        initialize WebKitUseSiteSpecificSpoofingPreferenceKey to false
        (-[WebPreferences _useSiteSpecificSpoofing]):
        get value of WebKitUseSiteSpecificSpoofingPreferenceKey
        (-[WebPreferences _setUseSiteSpecificSpoofing:]):
        set value of WebKitUseSiteSpecificSpoofingPreferenceKey
        
        * WebView/WebPreferencesPrivate.h:
        declare _useSiteSpecificSpoofing and _setUseSiteSpecificSpoofing
        
        * WebView/WebView.mm:
        cache the value of WebKitUseSiteSpecificSpoofingPreferenceKey in a bool in _private
        (-[WebView _preferencesChangedNotification:]):